Ajouts de controlleurs et vues - Station

--- a/AutoLib/Views/Shared/_Layout.cshtml
+++ b/AutoLib/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Autolib" asp-action="Index">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Autolib" asp-action="Index">Station à proximiter</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stations" asp-action="Index">Station à proximiter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Inscription</a>
