Ajout de la librarie et map leafletjs

--- a/AutoLib/Views/AutoLib/Index.cshtml
+++ b/AutoLib/Views/AutoLib/Index.cshtml
@@ -5,3 +5,8 @@
 
 <h1>Index Autolib</h1>
 
+@section Scripts {
+    <script>
+        console.log("the scripts has been triggered");
+    </script>
+}
