--- a/AutoLib/Views/Shared/_LayoutAutoLib.cshtml
+++ b/AutoLib/Views/Shared/_LayoutAutoLib.cshtml
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/Site.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/mangas.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+              integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+              crossorigin="" />
     </environment>
 
 </head>
@@ -32,6 +35,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+            crossorigin=""></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
