--- a/AutoLib/Views/Station/Index.cshtml
+++ b/AutoLib/Views/Station/Index.cshtml
@@ -5,6 +5,20 @@
 
 <h1>Index for Station</h1>
 
-@foreach (var obj in Model){
-    <p>@obj.IdStation @obj.Latitude, @obj.Longitude</p>
+<div id="map">
+
+
+</div>
+
+@section scripts {
+
+    <script type="text/javascript">
+        console.log("MAP : LAUNCHED");
+        var map = L.map('map').setView([51.505, -0.09], 13);
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
+        alert("hello");
+    </script>
 }
