--- a/AutoLib/Views/Station/Index.cshtml
+++ b/AutoLib/Views/Station/Index.cshtml
@@ -12,13 +12,5 @@
 
 @section scripts {
 
-    <script type="text/javascript">
-        console.log("MAP : LAUNCHED");
-        var map = L.map('map').setView([51.505, -0.09], 13);
-        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }).addTo(map);
-        alert("hello");
-    </script>
+    <script src="~/js/map.js" asp-append-version="true"></script>
 }
