--- a/AutoLib/Views/Register/Index.cshtml
+++ b/AutoLib/Views/Register/Index.cshtml
@@ -20,9 +20,9 @@
         <span asp-validation-for="Lastname" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+        <label asp-for="DateNaissance"></label>
+        <input asp-for="DateNaissance" type="date" class="form-control" />
+        <span asp-validation-for="DateNaissance" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Password"></label>
