Fonctionnalité de bases implémenté

--- a/AutoLib/Views/Login/Index.cshtml
+++ b/AutoLib/Views/Login/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Inscription</h1>
+<h1>Se connecter</h1>
 
 <form method="POST">
     <div asp-validation-summary="All"></div>
