--- a/AutoLib/Views/Station/Details.cshtml
+++ b/AutoLib/Views/Station/Details.cshtml
@@ -10,8 +10,6 @@
     TypeVehiculeController typeVehiculeController = new TypeVehiculeController(autolibContext);
 }
 
-<h1>Station : @ViewData["station"]</h1>
-
 <h2 class="text-center text-secondary">Choisissez votre véhicule</h2>
 
 <table class="table">
@@ -37,11 +35,59 @@
                     <td>@typeVehicule.TypeVehicule1</td>
                     <td>@typeVehicule.Categorie</td>
                     <td>@vehicule.EtatBatterie</td>
-                    <td><button class="btn btn-primary">Réserver</button></td>
+                    <td>
+                        <form asp-controller="Reservation" asp-action="Confirm" method="POST">
+                            <input type="text" name="VehiculeId" value=@vehicule.IdVehicule hidden>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmationModal">
+                                Réserver
+                            </button>
+
+                            <!-- Modale -->
+                            <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="ModalLabel">Confirmation de réservation</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Êtes-vous sûr de vouloir confirmer cette réservation ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                            <button type="submit" class="btn btn-primary">Confirmer</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                        </form>
+                    </td>
                 </tr>
             }
         }
     </tbody>
 </table>
 
+
+<!-- Modale -->
+<div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmation de réservation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Êtes-vous sûr de vouloir confirmer cette réservation ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-primary">Confirmer</button>
+            </div>
+        </div>
+    </div>
 
