--- a/AutoLib/Views/Station/Details.cshtml
+++ b/AutoLib/Views/Station/Details.cshtml
@@ -30,41 +30,44 @@
             {
                 Vehicule vehicule = vehiculeController.GetVehicule((int)vehiculeId);
                 TypeVehicule typeVehicule = typeVehiculeController.getTypeVehicule(vehicule.TypeVehicule);
-                <tr>
-                    <td>@borne.IdBorne</td>
-                    <td>@typeVehicule.TypeVehicule1</td>
-                    <td>@typeVehicule.Categorie</td>
-                    <td>@vehicule.EtatBatterie</td>
-                    <td>
-                        <form asp-controller="Reservation" asp-action="Confirm" method="POST">
-                            <input type="text" name="VehiculeId" value=@vehicule.IdVehicule hidden>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmationModal">
-                                Réserver
-                            </button>
+                if (vehicule.Disponibilite == "LIBRE")
+                {
+                    <tr>
+                        <td>@borne.IdBorne</td>
+                        <td>@typeVehicule.TypeVehicule1</td>
+                        <td>@typeVehicule.Categorie</td>
+                        <td>@vehicule.EtatBatterie</td>
+                        <td>
+                            <form asp-controller="Reservation" asp-action="Confirm" method="POST">
+                                <input type="text" name="VehiculeId" value=@vehicule.IdVehicule hidden>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmationModal">
+                                    Réserver
+                                </button>
 
-                            <!-- Modale -->
-                            <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="ModalLabel">Confirmation de réservation</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Êtes-vous sûr de vouloir confirmer cette réservation ?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                                            <button type="submit" class="btn btn-primary">Confirmer</button>
+                                <!-- Modale -->
+                                <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="ModalLabel">Confirmation de réservation</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Êtes-vous sûr de vouloir confirmer cette réservation ?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                                                <button type="submit" class="btn btn-primary">Confirmer</button>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                        </form>
-                    </td>
-                </tr>
+                            </form>
+                        </td>
+                    </tr>
+                }
             }
         }
     </tbody>
