--- a/AutoLib/Views/Home/Index.cshtml
+++ b/AutoLib/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome @ViewData["var"]</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-left">
+    <h1 class="display-4">Bienvenu @ViewData["var"]</h1>
+    <p>Nous sommes une entreprise de location de voitures située à Lyon offrant une large gamme de véhicules dans diverses stations pour tous vos besoins de déplacement.</p>
+    <p>Notre mission est de vous offrir un service de qualité à un prix abordable, avec une sélection de véhicules en excellent état pour vous permettre de profiter de votre voyage en toute tranquillité.</p>
+    <p>Nous espérons que vous apprécierez notre site de réservation en ligne simple et facile à utiliser, et nous nous réjouissons de vous accueillir bientôt en tant que client.</p>
+    <br />
+    <p>Ce site a été construit avec  <a href="https://docs.microsoft.com/aspnet/core">ASP.NET Core</a>.</p>
 </div>
