--- a/AutoLib/Views/Home/Privacy.cshtml
+++ b/AutoLib/Views/Home/Privacy.cshtml
@@ -2,5 +2,62 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
+<br />
+<h3>Politique de confidentialité</h3>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Notre site Web de réservation en ligne de voitures Autolib est dédié à la protection de la vie privée de nos utilisateurs.
+    Cette politique de confidentialité décrit les types d'informations que nous collectons sur notre site,
+    comment nous utilisons ces informations et à qui nous les divulguons.
+</p>
+<br />
+<h3>Informations collectées</h3>
+
+<p>
+    Nous collectons les informations suivantes lorsque vous réservez une voiture sur notre site :
+    nom, prénom , informations de carte de crédit/débit et informations sur les préférences de location de voiture.
+</p>
+<br />
+<h3>Utilisation des informations</h3>
+
+<p>
+    Nous utilisons les informations collectées pour vous fournir les services suivants :
+
+    Traitement des réservations et facturation
+    Envoi de confirmation de réservation
+    Service clientèle et résolution des problèmes
+    Amélioration de notre site web et de nos services
+    Envoi de promotions et d'offres spéciales
+</p>
+<br />
+<h3>Divulgation des informations</h3>
+<p>
+    Nous ne vendrons, n'échangerons ni partagerons les informations personnelles que vous nous
+    fournissez avec des tiers à moins que cela ne soit nécessaire pour fournir nos services,
+    tels que le traitement des paiements. Nous pouvons également être tenus de divulguer des
+    informations si cela est exigé par la loi.
+</p>
+<br />
+<h3>Sécurité des informations</h3>
+<p>
+    Nous prenons des mesures raisonnables pour protéger les informations personnelles que vous nous fournissez
+    contre la perte, l'utilisation abusive, la modification ou la divulgation non autorisées. Cependant, aucune
+    méthode de transmission sur Internet ou de stockage électronique n'est sûre à 100 %. Par conséquent, bien que
+    nous nous efforcions de protéger vos informations personnelles, nous ne pouvons garantir la sécurité absolue
+    de ces informations.
+</p>
+<br />
+<h3>Modifications à cette politique de confidentialité</h3>
+<p>
+    Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Si nous apportons des modifications
+    importantes à cette politique, nous publierons un avis sur notre site web pour informer les utilisateurs des changements
+    apportés.
+</p>
+<br />
+<h3>Contactez-nous</h3>
+<p>
+    Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter sur  l'adresse suivante :
+    Autolib@gmail.com
+
+    Cette politique de confidentialité a été mise à jour pour la dernière fois le 05/02/2023.
+</p>
