--- a/AutoLib/Views/Login/Index.cshtml
+++ b/AutoLib/Views/Login/Index.cshtml
@@ -32,4 +32,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
+<br />
+<br />
+<p>Pas encore de compte ?<a asp-controller="Register" asp-action="Index">cliquez ici</a>.</p>
