--- a/AutoLib/Views/Shared/_Layout.cshtml
+++ b/AutoLib/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1 justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Station" asp-action="Index">Station à proximiter</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Station" asp-action="Index">Station à proximité</a>
                         </li>
                         @if (string.IsNullOrEmpty(((ISession)ViewData["_Session"]).GetString("Firstname")))
                         {
