--- a/AutoLib/Views/Register/Index.cshtml
+++ b/AutoLib/Views/Register/Index.cshtml
@@ -37,4 +37,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
+<br />
+<br />
+<p>Vous possédez déjà un compte?<a asp-controller="Login" asp-action="Index">cliquez ici</a>.</p>
 
