--- a/AutoLib/Views/AutoLib/Index.cshtml
+++ b/AutoLib/Views/AutoLib/Index.cshtml
@@ -3,7 +3,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index Autolib</h1>
+<h1>AUTOLIB</h1>
+<br />
+<p>AUTOLIB est une entreprise française créée en 2010, basée à Lyon.</p>
+<p>Elle propose une solution de location de voitures pour les déplacements urbains rapides.</p>
+<p>
+    Les clients peuvent réserver une voiture pour une durée maximale de 30 minutes à partir de
+    n'importe quelle station AUTOLIB dans la ville de Lyon.
+</p>
+<p>
+    L'objectif de l'entreprise est de fournir une alternative pratique et écologique aux déplacements
+    en voiture traditionnels, en permettant aux clients de louer une voiture rapidement et sans
+    avoir à se soucier des frais d'entretien ou de stationnement.
+</p>
 
 @section Scripts {
     <script>
